# SO1_1S2025_202200066

Proyecto1/: create_containers.sh  logs.json  plot_containers.py
Proyecto1/container_manager/: Cargo.toml
Proyecto1/container_manager/src/: main.rs
Proyecto1/log_container/: Dockerfile  app.py
Proyecto1/modules/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo.ko.cmd  .sysinfo.mod.cmd  .sysinfo.mod.o.cmd  .sysinfo.o.cmd  modules.order  sysinfo.c  sysinfo.ko  sysinfo.mod  sysinfo.mod.c
Proyecto2/Kubernetes/: go-grpc-client-deployment.yaml  go-grpc-server-kafka-deployment.yaml  go-grpc-server-rabbit-deployment.yaml  go-rest-deployment.yaml  go-rest-ingress.yaml  go-rest-service.yaml  grafana-deployment.yaml  grafana-service.yaml  grafana-values.yaml  grpc-client-service.yaml  hpa-rust.yaml  ingress.yaml  kafka-consumer-deployment.yaml  namespace.yaml  rabbitmq-consumer-deployment.yaml  rabbitmq-deployment.yaml  redis-deployment.yaml  rust-deployment.yaml  rust-service.yaml  valkey-deployment.yaml
Proyecto2/consumers/kafka-consumer/: Dockerfile  go.mod  go.sum  main.go
Proyecto2/consumers/rabbitmq-consumer/: Dockerfile  go.mod  go.sum  main.go
Proyecto2/go-api/: Dockerfile.grpc-client  Dockerfile.grpc-server-kafka  Dockerfile.grpc-server-rabbit  Dockerfile.rest  go.mod  go.sum
Proyecto2/go-api/cmd/grpc-client/: main.go
Proyecto2/go-api/cmd/grpc-server-kafka/: main.go
Proyecto2/go-api/proto/: tweet.pb.go  tweet.proto  tweet_grpc.pb.go
Proyecto2/locust/: locustfile.py
Proyecto2/rust-api/: Cargo.toml  Dockerfile
Proyecto2/rust-api/src/: main.rs
(+2 files in other folders)
