[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"  # Versión ligeramente anterior más estable
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }  # Necesario para async
log = "0.4"  # Para logging
env_logger = "0.10"  # Logger para desarrollo